# MandelbrotApp

./: .gitignore  CMakeLists.txt  DoublePendulum.md  README.md  export_colormap.py  rk45.ipynb
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StaticAnalysis.cmake  lsan.supp
res/: adaptive_supersampling.glsl  colormaps.glsl  complex.glsl  double_pendulum_rhs.glsl  fragment_shader.glsl  fragment_shader_double_pendulum.glsl  fragment_shader_mandelbrot.glsl  fragment_shader_n_body_problem.glsl  maybe_rk45.glsl  n_body_problem_rhs.glsl  real.glsl  rk45.glsl  rk45_chatgpt.glsl  static_supersampling.glsl  zooming_and_tiling.glsl
src/: app_utility.cpp  app_utility.h  colormaps.cpp  colormaps.h  ini_file.h  main.cpp  saved_view.cpp  saved_view.h  screenshot.cpp  screenshot.h  shader.cpp  shader.h
src/model/: model.cpp  model.h  model_colormap.cpp  model_colormap.h  model_colormap_old.cpp  model_colormap_old.h  model_double_pendulum.cpp  model_double_pendulum.h  model_mandelbrot.cpp  model_mandelbrot.h  model_rk45.cpp  model_rk45.h  model_super_sampling.cpp  model_super_sampling.h
test-notebooks/: n_body_problem.ipynb
